minor changes in names

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-quotation_prj/venv/
+/my_venv/
 quotation_prj/quotation_app/migrations/*
 !quotation_prj/quotation_app/migrations/__init__.py
 
